<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:background="@color/orange_500">

        <TextView
            android:id="@+id/places_tv"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/places" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:background="@color/purple_500">

        <TextView
            android:id="@+id/hotels_tv"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/hotels" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:background="@color/green_500">

        <TextView
            android:id="@+id/food_tv"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/food" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:background="@color/blue_500">

        <TextView
            android:id="@+id/adventure_tv"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/adventure" />
    </FrameLayout>
</LinearLayout>