<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dips_16"
        app:cardCornerRadius="@dimen/dips_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/thumbnail_iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imageDesc"
                android:scaleType="fitXY"
                tools:src="@drawable/taj_mahal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray" />


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dips_8"
                android:layout_marginLeft="@dimen/dips_8"
                android:layout_marginTop="@dimen/dips_4"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                tools:text="@string/name_taj_mahal" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dips_8"
                android:layout_marginLeft="@dimen/dips_8"
                android:layout_marginTop="@dimen/dips_4"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                tools:text="@string/location_taj_mahal" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dips_8"
                android:layout_marginLeft="@dimen/dips_8"
                android:layout_marginTop="@dimen/dips_4"
                android:layout_marginBottom="@dimen/dips_8"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                tools:text="@string/desc_taj_mahal" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>